test/arrays/sungeun/invalid_block_reindex3.good
invalid_block_reindex3.chpl:19: error: halt reached - invalid reindex for Block: distribution bounding box (high) out of range in dimension 1
